# volym

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: boston_teapot_256x256x178_uint8_segments.json
shaders/: cpp_vol_rend.wgsl  importance_driven_volume_rendering.wgsl  importance_test.wgsl  raycast.wgsl  raycast_compute.wgsl  raycast_render.wgsl  render.wgsl  simple_compute.wgsl  simple_compute.wgsl.bak
src/: camera.rs  cli.rs  compute.rs  compute_pipeline.rs  context.rs  event_loop.rs  gpu_context.rs  gui.rs  gui_context.rs  main.rs  pipeline.rs  render_pipeline.rs  renderer.rs  rendering_context.rs  state.rs  transfer_function.rs  volume.rs
src/demos/: compute_base.rs  mod.rs  pipeline.rs
src/demos/simple/: compute_pipeline.rs  gpu_transfer_function.rs  gpu_volume.rs  importance.rs  mod.rs  volume.rs
src/gpu/: camera.rs  debug_matrix.rs  mod.rs  output_texture.rs  render_pipeline.rs  volume.rs
src/gpu_resources/: camera.rs  debug_matrix.rs  mod.rs  output_texture.rs  parameters.rs  texture.rs  tf.rs  transfer_function.rs  volume.rs
src/renderer/: mod.rs  pipeline.rs
volym_devtools/: Cargo.toml  README.md
volym_devtools/src/: main.rs
